# KernelAgent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  eval_accuracy.py  pyproject.toml  run.sh  run_deepseek.sh  run_kernelbench.py  t_service.py  web_ui.py
Fuser/: auto_agent.py  cli.py  code_extractor.py  compose_end_to_end.py  dedup.py  dispatch_kernel_agent.py  pipeline.py  runner.py  subgraph_extractor.py  worker.py
examples/: gemm.py  grouped_gemm.py  triton_01_element_add.py
kernel_perf_agent/: .env.example  pyproject.toml
kernel_perf_agent/examples/: gemm_sw.py
kernel_perf_agent/kernel_opt/: __init__.py
kernel_perf_agent/kernel_opt/configs/: envs.py  models.py
kernel_perf_agent/kernel_opt/database/: __init__.py  base.py
kernel_perf_agent/kernel_opt/database/code_samples/: matadd.py  matadd_perst.py  matadd_tma_device.py  matmul.py  matmul_sw.py  matmul_tma_host.py
kernel_perf_agent/kernel_opt/database/docs/: on_device_tma.py  on_host_tma.py  persistence.py  pid_swizzle.py  tma.md
kernel_perf_agent/kernel_opt/decorator/: agent.py  kernel_opt.py
kernel_perf_agent/kernel_opt/models/: providers.py
kernel_perf_agent/kernel_opt/profiler/: base.py  profiler.py
kernel_perf_agent/kernel_opt/prompts/: prompt_manager.py  rewrite_prompt_template.py
kernel_perf_agent/kernel_opt/retriever/: retriever.py
kernel_perf_agent/kernel_opt/utils/: debug_util.py  io_util.py  logging_util.py  proxy_util.py
kernel_perf_agent/kernel_opt/verifier/: base.py  benchmark.py  numeric.py  verifier.py
scripts/: collect.py  fuser_ui.py  pipeline_ui.py  triton_ui.py  (+1 more)
(+28 files in other folders)
